Basic scrolling banner complete

--- a/package.json
+++ b/package.json
@@ -13,8 +13,11 @@
     "@testing-library/user-event": "^13.5.0",
     "embla-carousel-fade": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
+    "marquee": "^0.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-fast": "^0.0.2",
+    "react-fast-marquee": "^1.6.5",
     "react-router-dom": "^7.2.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
