chore: add tsconfig, biome, and fix css type errors

--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react": "^19.1.7",
+    "@types/react-dom": "^19.1.6",
     "embla-carousel-fade": "^8.5.2",
     "embla-carousel-react": "^8.5.2",
     "marquee": "^0.2.1",
@@ -26,7 +28,10 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "biome format",
+    "lint": "biome lint",
+    "check": "biome check"
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +50,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@biomejs/biome": "^1.9.4"
   }
 }
