chore: separate out frontend and backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/styled": "^11.14.0",
     "@notionhq/client": "^4.0.2",
+    "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-router": "^1.114.3",
     "@tanstack/react-router-devtools": "^1.114.3",
     "@tanstack/router-plugin": "^1.114.3",
