--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.3.1",
+    "@mui/material": "^7.3.1",
     "@notionhq/client": "^4.0.2",
     "@tanstack/react-query": "^5.85.3",
     "@tanstack/react-router": "^1.114.3",
