--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"test": "vitest run"
 	},
 	"dependencies": {
+		"@emailjs/browser": "^4.4.1",
 		"@mui/icons-material": "^7.3.2",
 		"@mui/material": "^7.3.2",
 		"@notionhq/client": "^4.0.2",
@@ -22,7 +23,8 @@
 		"framer-motion": "^12.23.22",
 		"react": "^19.0.0",
 		"react-dom": "^19.0.0",
-		"react-fast-marquee": "^1.6.5"
+		"react-fast-marquee": "^1.6.5",
+		"react-icons": "^5.5.0"
 	},
 	"devDependencies": {
 		"@testing-library/dom": "^10.4.0",
